# 2023-Dash-Plotly-course

./: LICENSE  README.md  pyproject.toml
2023-11-27_session01/: Resources1 - Dash Fundamentals.epub  Session01-notes
2023-11-28_pre-work-belatedly/: dash_in_20_min.ipynb
2023-11-28_pre-work-belatedly/A Minimal Dash App/: app.ipynb  app.py
2023-11-29_assignment01/: Assignment Solution1 - Dash Fundamentals.epub  Assignment1 - Dash Fundamentals.epub  Exercise A.ipynb  Exercise B.ipynb  Exercise D.ipynb  Exercise E.md
2023-11-30_session02/: Resources2 - Dash App Interactivity.epub  Session 2 code.ipynb  Session 2.md
2023-12-04_assignment02-AppInteractivity(Callback)/: Assignment2 - Dash App Interactivity.epub
2023-12-04_session03/: Session03_notes_appProject.md
