[tool.poetry]
name = "2023-dash-plotly-course"
version = "0.1.0"
description = ""
authors = ["Alejandro Berrizbeitia <narrativus@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
plotnine = "^0.12.4"
dash = "^2.14.2"
datetime = "^5.3"
jupyter = "^1.0.0"
ipykernel = "^6.27.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
wordcloud = "^1.9.2"
scikit-learn = "^1.3.2"
psycopg2-binary = "^2.9.9"
openpyxl = "^3.1.2"
dash-ag-grid = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
